--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "precision_fit_studio"
-version = "0.7.0-INDEV"
+version = "0.8.0"
 authors = ["James Bell <jmhbell@icloud.com>"]
 edition = "2024"
 include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
